unpackaged/main/default/objects/Lead/fields/Stage_Previous__c.field-meta.xml
<CustomField>
    <fullName>Stage_Previous__c</fullName>
    <label>Stage (Previous)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Response</fullName>
            </value>
            <value>
                <fullName>Actionable Response</fullName>
            </value>
            <value>
                <fullName>Qualifying</fullName>
            </value>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Relevant</fullName>
            </value>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>MQL</fullName>
            </value>
            <value>
                <fullName>SAL</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Release from qualifying</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>