unpackaged/main/default/objects/Lead/fields/X18_digit_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_digit_Lead_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(18-digit) Lead ID</label>
    <type>Text</type>
</CustomField>