unpackaged/main/default/objects/Lead/fields/X6sense_Contact_Grade_Brightcove__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Contact_Grade_Brightcove__c</fullName>
    <description>6Sense</description>
    <label>6sense Contact Grade - Brightcove</label>
    <length>18</length>
    <type>Text</type>
</CustomField>