unpackaged/main/default/objects/Lead/fields/X6sense_Contact_Intent_Score_Brightcove__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Contact_Intent_Score_Brightcove__c</fullName>
    <label>6sense Contact Intent Score - Brightcove</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>