unpackaged/main/default/objects/Lead/fields/X6sense_Contact_Profile_Fit_Brightcove__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Contact_Profile_Fit_Brightcove__c</fullName>
    <label>6sense Contact Profile Fit - Brightcove</label>
    <length>18</length>
    <type>Text</type>
</CustomField>