unpackaged/main/default/objects/Lead/fields/ZoomInfo_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>ZoomInfo_Contact_ID__c</fullName>
    <externalId>true</externalId>
    <label>ZoomInfo Contact ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>