unpackaged/main/default/objects/Lead/recordTypes/Partner_Lead.recordType-meta.xml
<RecordType>
    <fullName>Partner_Lead</fullName>
    <active>true</active>
    <businessProcess>Lead Process</businessProcess>
    <description>Portal Partner Lead</description>
    <label>Partner Lead</label>
</RecordType>