unpackaged/main/default/objects/Lead/validationRules/Rejected_Leads_Require_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejected_Leads_Require_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>n2de__Is_rejected__c &amp;&amp; ISPICKVAL(Rejected_Reason__c  , &#39;&#39;)</errorConditionFormula>
    <errorDisplayField>Rejected_Reason__c</errorDisplayField>
    <errorMessage>A Rejected Reason must be set if a Lead is Rejected</errorMessage>
</ValidationRule>