unpackaged/main/default/objects/Lead/listViews/Distribution_Engine_Archive_Lead.listView-meta.xml
<ListView>
    <fullName>Distribution_Engine_Archive_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Distribution Engine Archive</label>
    <queue>Distribution_Engine_Archive</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>