unpackaged/main/default/objects/Lead/listViews/Zoominfo_NA_Leads_DONOTEDIT.listView-meta.xml
<ListView>
    <fullName>Zoominfo_NA_Leads_DONOTEDIT</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>DOZISF__ZoomInfo_Company_ID__c</columns>
    <columns>ZoomInfo_Contact_ID__c</columns>
    <columns>DOZISF__ZoomInfo_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.COUNTRY_CODE</field>
        <operation>equals</operation>
        <value>US</value>
    </filters>
    <filters>
        <field>LEAD.CONVERTED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>ZOOMINFO FILTERS - Leads - DONOTEDIT</label>
    <sharedTo>
        <role>MarketingOperations</role>
        <role>Salesforce_Team</role>
    </sharedTo>
</ListView>